// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Schema Checkbox 1`] = `
<div>
  <form
    class="ui form"
  >
    <div
      class="field"
    >
      <div
        class="ui checkbox"
      >
        <input
          class="hidden"
          id="field_checkbox_agree"
          name="agree"
          readonly=""
          tabindex="0"
          type="checkbox"
          value=""
        />
        <label
          for="field_checkbox_agree"
        >
          I Agree
        </label>
      </div>
    </div>
    <button
      type="submit"
      class="ui primary button"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form Schema Dropdown 1`] = `
<div>
  <form
    class="ui form"
  >
    <div
      class="field"
    >
      <label
        for="field_dropdown_name"
      >
        Name
      </label>
      <div
        id="field_dropdown_name"
        name="name"
        role="listbox"
        aria-expanded="false"
        class="ui selection dropdown"
        tabindex="0"
      >
        <div
          class="text"
          role="alert"
          aria-live="polite"
        />
        <i
          aria-hidden="true"
          class="dropdown icon"
        />
        <div
          class="menu transition"
        >
          <div
            style="pointer-events: all;"
            role="option"
            aria-checked="false"
            aria-selected="true"
            class="selected item"
          >
            <span
              class="text"
            >
              Justin
            </span>
          </div>
          <div
            style="pointer-events: all;"
            role="option"
            aria-checked="false"
            aria-selected="false"
            class="item"
          >
            <span
              class="text"
            >
              Not Justin
            </span>
          </div>
        </div>
      </div>
    </div>
    <button
      type="submit"
      class="ui primary button"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form Schema Dropdown: allow additions 1`] = `
<div>
  <form
    class="ui form"
  >
    <div
      class="field"
    >
      <label
        for="field_dropdown_name"
      >
        Name
      </label>
      <div
        id="field_dropdown_name"
        name="name"
        role="combobox"
        aria-expanded="true"
        class="ui active visible multiple search selection dropdown"
      >
        <a
          class="ui label"
          value="Paula"
        >
          Paula
          <i
            aria-hidden="true"
            class="delete icon"
          />
        </a>
        <input
          aria-autocomplete="list"
          autocomplete="off"
          class="search"
          tabindex="0"
          type="text"
          value=""
          style=""
        />
        <span
          class="sizer"
          style=""
        >
          Paula
        </span>
        <div
          class="text"
          role="alert"
          aria-live="polite"
        />
        <i
          aria-hidden="true"
          class="dropdown icon"
        />
        <div
          aria-multiselectable="true"
          role="listbox"
          class="visible menu transition"
        >
          <div
            style="pointer-events: all;"
            role="option"
            aria-checked="false"
            aria-selected="true"
            class="selected item"
          >
            <span
              class="text"
            >
              Justin
            </span>
          </div>
          <div
            style="pointer-events: all;"
            role="option"
            aria-checked="false"
            aria-selected="false"
            class="item"
          >
            <span
              class="text"
            >
              Not Justin
            </span>
          </div>
        </div>
      </div>
    </div>
    <button
      type="submit"
      class="ui primary button"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form Schema Input 1`] = `
<div>
  <form
    class="ui form"
  >
    <div
      class="field"
    >
      <label
        for="field_input_name"
      >
        Name
      </label>
      <div
        class="ui input"
      >
        <input
          id="field_input_name"
          name="name"
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      type="submit"
      class="ui primary button"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form Schema Input with value 1`] = `
<div>
  <form
    class="ui form"
  >
    <div
      class="field"
    >
      <label
        for="field_input_name"
      >
        Name
      </label>
      <div
        class="ui input"
      >
        <input
          id="field_input_name"
          name="name"
          type="text"
          value="Justin"
        />
      </div>
    </div>
    <button
      type="submit"
      class="ui primary button"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form Schema Input: inputProps & fieldProps 1`] = `
<div>
  <form
    class="ui form"
  >
    <div
      class="eight wide field"
    >
      <label
        for="field_input_ssn"
      >
        SSN
      </label>
      <div
        class="ui input"
      >
        <input
          id="field_input_ssn"
          name="ssn"
          placeholder="SSN"
          type="password"
          value=""
        />
      </div>
    </div>
    <button
      type="submit"
      class="ui primary button"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form Schema TextArea 1`] = `
<div>
  <form
    class="ui form"
  >
    <div
      class="field"
    >
      <label
        for="field_textarea_notes"
      >
        Notes
      </label>
      <textarea
        id="field_textarea_notes"
        name="notes"
        rows="4"
      />
    </div>
    <button
      type="submit"
      class="ui primary button"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form child as a function 1`] = `
<div>
  <form
    data-testid="test-id"
    class="ui loading form"
  >
    <button
      type="submit"
      class="ui primary disabled button"
      disabled=""
      tabindex="-1"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form errors in complex types 1`] = `
<div>
  <form
    class="ui form"
  >
    <div
      class="error field"
    >
      <label
        for="field_input_values.0.name"
      >
        Name
      </label>
      <div
        class="ui input"
      >
        <input
          id="field_input_values.0.name"
          name="values.0.name"
          type="text"
          value="test"
        />
      </div>
      <span
        class="sui-error-message"
      >
        Error
      </span>
    </div>
    <button
      type="submit"
      class="ui primary button"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form ignore loading 1`] = `
<div>
  <form
    class="ui form"
  >
    <button
      type="submit"
      class="ui primary disabled button"
      disabled=""
      tabindex="-1"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form render props 1`] = `
<div>
  <form
    class="ui loading form"
  >
    <button
      type="submit"
      class="ui primary disabled button"
      disabled=""
      tabindex="-1"
    >
      Submit
    </button>
  </form>
</div>
`;
